--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vl",
+  "name": "vale-luz",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.5.6",
-    "@types/react": "18.2.21",
+    "@phosphor-icons/react": "^2.0.10",
+    "@prisma/client": "^5.2.0",
+    "@supabase/supabase-js": "^2.33.1",
+    "@types/node": "20.4.9",
+    "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
+    "@types/react-scroll": "^1.8.7",
+    "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.1",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "postcss": "8.4.28",
+    "eslint-config-next": "13.4.13",
+    "next": "13.4.13",
+    "next-auth": "^4.23.1",
+    "pigeon-maps": "^0.21.3",
+    "postcss": "8.4.27",
+    "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-scroll": "^1.8.9",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0"
   }
 }
