--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "bcrypt": "^5.1.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "leaflet": "^1.9.4",
     "next": "13.4.13",
     "next-auth": "^4.23.1",
-    "pigeon-maps": "^0.21.3",
     "postcss": "8.4.27",
     "prisma": "^5.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-leaflet": "^4.2.1",
     "react-scroll": "^1.8.9",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
@@ -35,6 +36,8 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0"
+    "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.3",
+    "@types/react-leaflet": "^3.0.0"
   }
 }
