--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
     "@phosphor-icons/react": "^2.0.10",
     "@prisma/client": "^5.2.0",
     "@supabase/supabase-js": "^2.33.1",
